# snc

./: .gitignore  CMakeLists.txt
cmake/: find-config.cmake.in
commandline/: CMakeLists.txt  CommandLine.h  KeyHit.h  cmd_iface.cpp  genericSender.cpp  genericSender2.cpp
snc/: CMakeLists.txt  config.h
src/: CMakeLists.txt  SystemdIface.cpp  SystemdIface.h  broker.cpp  client.cpp  client.h  commandNames.cpp  commandNames.h
system/: CMakeLists.txt
systemd/: snc-broker.service
